Fixed more files

--- a/sources.html
+++ b/sources.html
@@ -12,16 +12,16 @@
 
     <nav>
         <ul>
-            <li><a rel="Internal" href="./C-Compiler/driver.h">driver.h</a></li>
-            <li><a rel="Internal" href="./C-Compiler/driver.c">driver.c</a></li>
-            <li><a rel="Internal" href="./C-Compiler/grammar.y">grammar.y</a></li>
-            <li><a rel="Internal" href="./C-Compiler/lex.l">lex.l</a></li>
-            <li><a rel="Internal" href="./C-Compiler/lex.yy.c">lex.yy.c</a></li>
-            <li><a rel="Internal" href="./C-Compiler/makefile">makefile</a></li>
-            <li><a rel="Internal" href="./C-Compiler/symTable.c">symTable.c</a></li>
-            <li><a rel="Internal" href="./C-Compiler/symTable.h">symTable.h</a></li>
-            <li><a rel="Internal" href="./C-Compiler/testFile.c">testFile.c</a></li>
-            <li><a rel="Internal" href="./C-Compiler/y.tab.h">y.tab.h</a></li>
+            <li><a rel="Internal" href="./C Files/driver.h">driver.h</a></li>
+            <li><a rel="Internal" href="./C Files/driver.c">driver.c</a></li>
+            <li><a rel="Internal" href="./C Files/grammar.y">grammar.y</a></li>
+            <li><a rel="Internal" href="./C Files/lex.l">lex.l</a></li>
+            <li><a rel="Internal" href="./C Files/lex.yy.c">lex.yy.c</a></li>
+            <li><a rel="Internal" href="./C Files/makefile">makefile</a></li>
+            <li><a rel="Internal" href="./C Files/symTable.c">symTable.c</a></li>
+            <li><a rel="Internal" href="./C Files/symTable.h">symTable.h</a></li>
+            <li><a rel="Internal" href="./C Files/testFile.c">testFile.c</a></li>
+            <li><a rel="Internal" href="./C Files/y.tab.h">y.tab.h</a></li>
         </ul>
     </nav>
 
