--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
 	<figure>
-            <img src="./eggs.jpeg" />
+            <img src="https://github.com/d-sanchez/d-sanchez.github.io/blob/master/eggs.jpeg" />
             <figcaption>
                 Dwight Egbert excited about the release of Windows 95.
             </figcaption>
