--- a/directions.html
+++ b/directions.html
@@ -15,6 +15,15 @@
     <p>2: run ./a.out FileNameHere -d[lps]</p>
     <p>The argument -d[] is optional, and each parameter within it is optional.</p>
     <br />
+    
+    <h1>Test Files</h1>
+
+    <p>TestFile.c: Multiple Declerations and Types </p>
+    <p>TestFile1.c: Redecleration Error</p>
+    <p>TestFile2.c: Undeclared Variable Error</p>
+    <p>TestFile3.c  Assigning a new value</p>
+    <p>TestFile24.c Symbol Table Dump/Missing '}' </p>
+    <br />
 
     <nav>
         <ul>
