--- a/sources.html
+++ b/sources.html
@@ -12,6 +12,7 @@
 
     <nav>
         <ul>
+            <p>Sources Files</p>
             <li><a rel="Internal" href="./C Files/driver.h">driver.h</a></li>
             <li><a rel="Internal" href="./C Files/driver.c">driver.c</a></li>
             <li><a rel="Internal" href="./C Files/grammar.y">grammar.y</a></li>
@@ -22,6 +23,16 @@
             <li><a rel="Internal" href="./C Files/symTable.h">symTable.h</a></li>
             <li><a rel="Internal" href="./C Files/testFile.c">testFile.c</a></li>
             <li><a rel="Internal" href="./C Files/y.tab.h">y.tab.h</a></li>
+
+            <p>Test Cases</p>
+            <li><a rel="Internal" href="./C Files/TestFile.c"> TestFile.c</a><li>
+            <li><a rel="Internal" href="./C Files/TestFile1.c">TestFile1.c</a><li>
+            <li><a rel="Internal" href="./C Files/TestFile2.c">TestFile2.c</a><li>
+            <li><a rel="Internal" href="./C Files/TestFile3.c">TestFile3.c</a><li>
+            <li><a rel="Internal" href="./C Files/TestFile4.c">TestFile4.c</a><li>
+
+            <p>Zip</p>
+            
         </ul>
     </nav>
     
