Added a compiled zip of c files

--- a/sources.html
+++ b/sources.html
@@ -25,14 +25,15 @@
             <li><a rel="Internal" href="./C Files/y.tab.h">y.tab.h</a></li>
 
             <p>Test Cases</p>
-            <li><a rel="Internal" href="./C Files/TestFile.c"> TestFile.c</a><li>
-            <li><a rel="Internal" href="./C Files/TestFile1.c">TestFile1.c</a><li>
-            <li><a rel="Internal" href="./C Files/TestFile2.c">TestFile2.c</a><li>
-            <li><a rel="Internal" href="./C Files/TestFile3.c">TestFile3.c</a><li>
-            <li><a rel="Internal" href="./C Files/TestFile4.c">TestFile4.c</a><li>
+            <li><a rel="Internal" href="./C Files/TestFile.c"> TestFile.c</a> </li>
+            <li><a rel="Internal" href="./C Files/TestFile1.c">TestFile1.c</a></li>
+            <li><a rel="Internal" href="./C Files/TestFile2.c">TestFile2.c</a></li>
+            <li><a rel="Internal" href="./C Files/TestFile3.c">TestFile3.c</a></li>
+            <li><a rel="Internal" href="./C Files/TestFile4.c">TestFile4.c</a></li>
 
             <p>Zip</p>
-            
+            <li><a rel="Internal" href="./C Files/C-Compiler.zip">C-Compiler</a></li>
+
         </ul>
     </nav>
     
