--- a/directions.html
+++ b/directions.html
@@ -14,6 +14,7 @@
     <p>1: run make</p>
     <p>2: run ./a.out FileNameHere -d[lps]</p>
     <p>The argument -d[] is optional, and each parameter within it is optional.</p>
+    <p>gcc symTableTest.c (to test symbol Table)</p>
     <br />
     
     <h1>Test Files</h1>
