--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 
-    <h1>Compilers PA 5, 6, 7</h1>
+    <h1>Compilers PA 9</h1>
 
     <nav>
         <ul>
-            <li><a rel="Internal" href="./overview.html">overview of compiler</a></li>
-            <li><a rel="Internal" href="./directions.html">how to run compiler</a></li>
             <li><a rel="Internal" href="./sources.html">source files</a></li>
         </ul>
     </nav>
