--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
         <br />
         
         <p>We used C to write the compiler.</p>
+        <p>All code for this PA is in threeAddressCode.c.</p>
         
         <p>To run: </p>
         <p>1: run make</p>
