--- a/sources.html
+++ b/sources.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -23,6 +23,7 @@
             <li><a rel="Internal" href="./C Files/symTable.h">symTable.h</a></li>
             <li><a rel="Internal" href="./C Files/testFile.c">testFile.c</a></li>
             <li><a rel="Internal" href="./C Files/y.tab.h">y.tab.h</a></li>
+            <li><a rel="Internal" href="./C Files/threeAddressCode.c">threeAddressCode.c</a></li>
 
             <p>Test Cases</p>
             <li><a rel="Internal" href="./C Files/TestFile.c"> TestFile.c</a> </li>
@@ -30,6 +31,7 @@
             <li><a rel="Internal" href="./C Files/TestFile2.c">TestFile2.c</a></li>
             <li><a rel="Internal" href="./C Files/TestFile3.c">TestFile3.c</a></li>
             <li><a rel="Internal" href="./C Files/TestFile4.c">TestFile4.c</a></li>
+            <li><a rel="Internal" href="./C Files/TestFile5.c">TestFile4.c</a></li>
 
             <p>Zip</p>
             <li><a rel="Internal" href="./C Files/C-Compiler.zip">C-Compiler</a></li>
