update to pa 10

--- a/overview.html
+++ b/overview.html
@@ -14,20 +14,12 @@
 
     <p>Connor Kirby, Ben Wendell, Daniel Sanchez</p>
     <p>CS 460</p>
-    <p>October 21, 2015</p>
-    <br />
+    <p>December 15, 2015</p>
     
-    <p>We used C to write the compiler for C.</p>
-    <p>For the symbol table, we created a stack of BSTs. Each BST represents a scope of the program. Function definitions and global variables always go in the bottom BST.</p>
-    <br />
-
-    <br />
-    <p>For the command line line arguments, there are options to send the output of each phase to a file. When running a.out, you must enter the input filename as one of the arguments. The second argument allows output of each phase to a file. The possible options are -d[lps] and any combonation of l, p, and s. Using -d[l] will save the scanner output to lexOutput.txt. Using -d[p] will save the parse output to parserOutput.txt. Using -d[s] will save the symbol table.</p>
-
+    <p>Compiler for C</p>
 
 </artice>
 
-    <br />
 
     <nav>
         <ul>
