--- a/sources.html
+++ b/sources.html
@@ -3,36 +3,21 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>PA 5, 6, 7</title>
+    <title>PA 10</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
-    <h1>Compilers PA 5, 6, 7</h1>
+    <h1>Compilers PA 10</h1>
 
     <nav>
         <ul>
             <p>Sources Files</p>
-            <li><a rel="Internal" href="./C Files/driver.h">driver.h</a></li>
-            <li><a rel="Internal" href="./C Files/driver.c">driver.c</a></li>
-            <li><a rel="Internal" href="./C Files/grammar.y">grammar.y</a></li>
-            <li><a rel="Internal" href="./C Files/lex.l">lex.l</a></li>
-            <li><a rel="Internal" href="./C Files/lex.yy.c">lex.yy.c</a></li>
-            <li><a rel="Internal" href="./C Files/makefile">makefile</a></li>
-            <li><a rel="Internal" href="./C Files/symTable.c">symTable.c</a></li>
-            <li><a rel="Internal" href="./C Files/symTable.h">symTable.h</a></li>
-            <li><a rel="Internal" href="./C Files/testFile.c">testFile.c</a></li>
-            <li><a rel="Internal" href="./C Files/y.tab.h">y.tab.h</a></li>
             <li><a rel="Internal" href="./C Files/threeAddressCode.c">threeAddressCode.c</a></li>
 
             <p>Test Cases</p>
             <li><a rel="Internal" href="./C Files/TestFile.c"> TestFile.c</a> </li>
-            <li><a rel="Internal" href="./C Files/TestFile1.c">TestFile1.c</a></li>
-            <li><a rel="Internal" href="./C Files/TestFile2.c">TestFile2.c</a></li>
-            <li><a rel="Internal" href="./C Files/TestFile3.c">TestFile3.c</a></li>
-            <li><a rel="Internal" href="./C Files/TestFile4.c">TestFile4.c</a></li>
-            <li><a rel="Internal" href="./C Files/TestFile5.c">TestFile4.c</a></li>
-
+            
             <p>Zip</p>
             <li><a rel="Internal" href="./C Files/C-Compiler.zip">C-Compiler</a></li>
 
