--- a/directions.html
+++ b/directions.html
@@ -3,27 +3,20 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>PA 5, 6, 7</title>
+    <title>PA 10</title>
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
-    <h1>Compilers PA 5, 6, 7</h1>
+    <h1>Compilers PA 10</h1>
 
     <p>To run the compiler: </p>
     <p>1: run make</p>
-    <p>2: run ./a.out FileNameHere -d[lps]</p>
-    <p>The argument -d[] is optional, and each parameter within it is optional.</p>
-    <p>gcc symTableTest.c (to test symbol Table)</p>
+    <p>2: run ./a.out FileNameHere -d[lps] -aq</p>
+
     <br />
     
     <h1>Test Files</h1>
-
-    <p>TestFile.c: Multiple Declerations and Types </p>
-    <p>TestFile1.c: Redecleration Error</p>
-    <p>TestFile2.c: Undeclared Variable Error</p>
-    <p>TestFile3.c  Assigning a new value</p>
-    <p>TestFile4.c Symbol Table Dump/Missing '}' </p>
     <br />
 
     <nav>
