--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
 
     <nav>
         <ul>
-            <li><a rel="Internal" href="./test1.html">Iterative Factorial</a></li>
-            <li><a rel="Internal" href="./test2.html">Bubble Sort</a></li>
-            <li><a rel="Internal" href="./test3.html">Matrix Multiplication</a></li>
+            <li><a rel="Internal" href="./test1.html"> 2D Arrays</a></li>
+            <li><a rel="Internal" href="./test2.html"> </a></li>
+            <li><a rel="Internal" href="./test3.html"> </a></li>
         </ul>
     </nav>
 
