--- a/test1.html
+++ b/test1.html
@@ -7,12 +7,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-    <h1>Iterative Factorial</h1>
     <nav>
-        <ul>
-            <li><a rel="Internal" href="./index.html">Home</a></li>
-        </ul>
+    	<li><a rel="Internal" href="./index.html">Home</a></li>
     </nav>
+
+    <h1>Simple Assignments</h1>
 
 
 </body>
