--- a/index.html
+++ b/index.html
@@ -27,9 +27,13 @@
 
     <nav>
         <ul>
-            <li><a rel="Internal" href="./test1.html"> 2D Arrays</a></li>
-            <li><a rel="Internal" href="./test2.html"> </a></li>
-            <li><a rel="Internal" href="./test3.html"> </a></li>
+            <li><a rel="Internal" href="./test1.html"> Test 1</a></li>
+            <li><a rel="Internal" href="./test2.html"> Test 2</a></li>
+            <li><a rel="Internal" href="./test3.html"> 2D Arrays</a></li>
+            <li><a rel="Internal" href="./test4.html"> Test 4</a></li>
+            <li><a rel="Internal" href="./test4.html"> Test 5</a></li>
+            <li><a rel="Internal" href="./test4.html"> Test 6</a></li>
+
         </ul>
     </nav>
 
