--- a/test1.html
+++ b/test1.html
@@ -11,8 +11,9 @@
     	<li><a rel="Internal" href="./index.html">Home</a></li>
     </nav>
 
-    <h1>Simple Assignments</h1>
+    <h1>Type Checking</h1>
 
+	<script src="https://gist.github.com/d-sanchez/f6ed27b56ca9030e033b.js"></script>
 
 </body>
 </html>
