--- a/index.html
+++ b/index.html
@@ -19,21 +19,20 @@
         <p>TAC to Assembly was done in python.</p>
         <br />
         
-        <p>Enter the following commands to run: </p>
-        <p>1: make</p>
-        <p>2: ./a.out [TestFileNameHere] -d[lps] -aq</p>
-
+        <p>Enter the following commands to a individual file: </p>
+        <p><t>1: make</p>
+        <p>2: ./a.out [TestFileNameHere] -q</p>
+        <p>3: copy and paste text from terminal to threeAddressCode.txt</p>
+        <p>4: python assembly.py</p><br/>
     </artice>
 
     <nav>
         <ul>
-            <li><a rel="Internal" href="./test1.html"> Test 1</a></li>
-            <li><a rel="Internal" href="./test2.html"> Test 2</a></li>
-            <li><a rel="Internal" href="./test3.html"> 2D Arrays</a></li>
-            <li><a rel="Internal" href="./test4.html"> Test 4</a></li>
-            <li><a rel="Internal" href="./test4.html"> Test 5</a></li>
-            <li><a rel="Internal" href="./test4.html"> Test 6</a></li>
-
+            <li><a rel="Internal" href="./test1.html"> testFile1.c: Type Checking</a></li>
+            <li><a rel="Internal" href="./test2.html"> testFile2.c: 2d Arrays</a></li>
+            <li><a rel="Internal" href="./test3.html"> testFile3.c: If Statements & While Loops</a></li>
+            <li><a rel="Internal" href="./test4.html"> testFile4.c: Nested Loop</a></li>
+            <li><a rel="Internal" href="./test4.html"> testFile5.c: Iterative Factorial</a></li>
         </ul>
     </nav>
 
