--- a/test2.html
+++ b/test2.html
@@ -11,8 +11,10 @@
     	<li><a rel="Internal" href="./index.html">Home</a></li>
     </nav>
 
-	
-    <h1></h1>
+
+    <h1>2d Arrays</h1>
+
+    <script src="https://gist.github.com/d-sanchez/14d42c52ba535bb06b25.js"></script>
 
 
 </body>
