--- a/test3.html
+++ b/test3.html
@@ -11,9 +11,9 @@
     	<li><a rel="Internal" href="./index.html">Home</a></li>
     </nav>
 
-    <h1>2d Arrays</h1>
+    <h1>If Statement & While Loop</h1>
 
-    <script src="https://gist.github.com/d-sanchez/14d42c52ba535bb06b25.js"></script>
-
+	<script src="https://gist.github.com/d-sanchez/9fb7a185cff76b444ba6.js"></script>
+	
 </body>
 </html>
