--- a/index.html
+++ b/index.html
@@ -17,10 +17,15 @@
         
         <p>We made the mistake to use C to write the compiler.</p>
         <p>TAC to Assembly was done in python.</p>
+        <p>All Assembly code was tested on mips </p>
         <br />
         
+        <p>Enter the following commands to run all files: </p>
+        <p>1: make</p>
+        <p>2: ./foo</p>
+
         <p>Enter the following commands to a individual file: </p>
-        <p><t>1: make</p>
+        <p>1: make</p>
         <p>2: ./a.out [TestFileNameHere] -q</p>
         <p>3: copy and paste text from terminal to threeAddressCode.txt</p>
         <p>4: python assembly.py</p><br/>
@@ -31,7 +36,7 @@
             <li><a rel="Internal" href="./test1.html"> testFile1.c: Type Checking</a></li>
             <li><a rel="Internal" href="./test2.html"> testFile2.c: 2d Arrays</a></li>
             <li><a rel="Internal" href="./test3.html"> testFile3.c: If Statements & While Loops</a></li>
-            <li><a rel="Internal" href="./test4.html"> testFile4.c: Nested Loop</a></li>
+            <li><a rel="Internal" href="./test4.html"> testFile4.c: Nested For Loop</a></li>
             <li><a rel="Internal" href="./test4.html"> testFile5.c: Iterative Factorial</a></li>
         </ul>
     </nav>
