removed old compiler stuff

--- a/resume.html
+++ b/resume.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -7,14 +7,10 @@
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
-	<nav>
+    <nav>
     	<li><a rel="Internal" href="./index.html">Home</a></li>
     </nav>
 
-    <h1>Nested For Loops</h1>
-
-
-	<script src="https://gist.github.com/d-sanchez/a2b005436550fcdcb270.js"></script>
 
 </body>
 </html>
