--- a/index.html
+++ b/index.html
@@ -1,39 +1,22 @@
 ﻿<!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html>
 <head>
+    <meta name = "viewport" content="width=device-width">
     <meta charset="utf-8" />
-    <title>CS 460</title>
+    <title>Daniel Sanchez</title>
+
     <link rel="stylesheet" type="text/css" href="stylesheet.css">
 </head>
 <body>
 
-    <h1>CS 460 Compiler Construction: PA 10</h1>
+    <h1>Daniel Sanchez</h1>
     
-    <article id="ArticleOne">
-
-        <p>Connor Kirby, Ben Wendell, Daniel Sanchez</p>
-        <br />
-        
-        <p>We made the mistake to use C to write the compiler.</p>
-        <p>TAC to Assembly was done in python.</p>
-        <p>All Assembly code was tested on mips </p>
-        <br />
-
-        <p>Enter the following commands to a individual file: </p>
-        <p>1: make</p>
-        <p>2: ./a.out [TestFileNameHere] -q</p>
-        <p>3: copy and paste text from terminal to threeAddressCode.txt</p>
-        <p>4: python assembly.py</p><br/>
-    </artice>
-
     <nav>
         <ul>
-            <li><a rel="Internal" href="./test1.html"> testFile1.c: Type Checking</a></li>
-            <li><a rel="Internal" href="./test2.html"> testFile2.c: 2d Arrays</a></li>
-            <li><a rel="Internal" href="./test3.html"> testFile3.c: If Statements & While Loops</a></li>
-            <li><a rel="Internal" href="./test4.html"> testFile4.c: Nested For Loop</a></li>
-            <li><a rel="Internal" href="./test4.html"> testFile5.c: Iterative Factorial</a></li>
+            <li><a rel="Internal" href="./github.html"> Github</a></li>
+            <li><a rel="Internal" href="./resume.html"> Resume</a></li>
+            <li><a rel="Internal" href="./projects.html"> Projects</a></li>
         </ul>
     </nav>
 
