experimenting with latex

--- a/resume.html
+++ b/resume.html
@@ -11,6 +11,8 @@
     	<li><a rel="Internal" href="./index.html">Home</a></li>
     </nav>
 
+<iframe src="https://docs.google.com/viewer?srcid=0B0g9LF4glmJeenJYeU5FV09QekE&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="580px" height="480px"></iframe>
+
 
 </body>
 </html>
