--- a/index.html
+++ b/index.html
@@ -4,21 +4,32 @@
 <head>
     <meta name = "viewport" content="width=device-width">
     <meta charset="utf-8" />
+
     <title>Daniel Sanchez</title>
 
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
-</head>
-<body>
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
+    <link href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel ="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
-    <h1>Daniel Sanchez</h1>
-    
-    <nav>
-        <ul>
-            <li><a rel="Internal" href="./github.html"> Github</a></li>
-            <li><a rel="Internal" href="./resume.html"> Resume</a></li>
-            <li><a rel="Internal" href="./projects.html"> Projects</a></li>
-        </ul>
-    </nav>
+    <link href="stylesheets/style.css" rel="stylesheet">
+
+</head>
+
+
+
+<body>    
+    <div class="container" id="header">
+        <h1>
+            Daniel Sanchez
+        </h1>
+
+
+        <a href="https://github.com/d-sanchez" target="_blank"> <i class="fa fa-github fa-2x" style="color:black"></i></a>
+        <a href = "mailto:danielsanchez@nevada.unr.edu" target = "_blank"> <i class="fa fa-envelope  fa-2x" style="color:black"></i></a>
+
+
+    </div>
+        
 
 </body>
 </html>
