--- a/resume.html
+++ b/resume.html
@@ -3,15 +3,14 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    <title>PA 10</title>
-    <link rel="stylesheet" type="text/css" href="stylesheet.css">
+    <title>Daniel's Site</title>
+    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
+    
 </head>
 <body>
-    <nav>
-    	<li><a rel="Internal" href="./index.html">Home</a></li>
-    </nav>
 
 <iframe src="https://docs.google.com/viewer?srcid=0B0g9LF4glmJeenJYeU5FV09QekE&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="580px" height="480px"></iframe>
+
 
 
 </body>
