--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name = "viewport" content="width=device-width">
     <meta charset="utf-8" />
 
-    <title>Daniel Sanchez</title>
+    <title>Daniel's Site</title>
 
     <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
     <link href = "https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" rel ="stylesheet" type="text/css">
@@ -24,12 +24,18 @@
         </h1>
 
 
-        <a href="https://github.com/d-sanchez" target="_blank"> <i class="fa fa-github fa-2x" style="color:black"></i></a>
-        <a href = "mailto:danielsanchez@nevada.unr.edu" target = "_blank"> <i class="fa fa-envelope  fa-2x" style="color:black"></i></a>
+        <a href="https://github.com/d-sanchez" target="_blank"> <i class="fa fa-github " style="color:black"></i></a> 
+        <a href = "mailto:danielsanchez@nevada.unr.edu" target = "_blank"> <i class="fa fa-envelope " style="color:black"></i></a>
+        <!-- <a href="resume.html" target="_blank"> <i class="fa fa-file fa-2x" style="color:black"></i></a> -->
+
+        <!-- <a href="about.html" target="_blank"> About</a> -->
+        <a href="resume.html" target="_blank"> Resume </a> 
+        <a href="projects.html" target="_blank"> Projects</a>
 
 
+        <p> - Somehow you have found my page. Currently under construction. </p>  
     </div>
-        
+
 
 </body>
 </html>
