--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-<iframe src="https://docs.google.com/viewer?srcid=0B0g9LF4glmJeMGxMQVNkMko1OVE&pid=explorer&efh=false&a=v&chrome=false&embedded=true" width="1000px" height="1150"></iframe>
+- This page is empty (for now)
+<br></br>
+<img src="https://pbs.twimg.com/profile_images/577309793104175104/y2jIo9dq.png" alt="biblethump" style="width:width;height:height;">
 
 
 </body>
