started using bootstrap & edited projects page

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html>
 <head>
-    <meta name = "viewport" content="width=device-width">
+    <meta name "viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8" />
 
     <title>Daniel's Site</title>
@@ -24,16 +24,21 @@
         </h1>
 
 
-        <a href="https://github.com/d-sanchez" target="_blank"> <i class="fa fa-github " style="color:black"></i></a> 
-        <a href = "mailto:danielsanchez@nevada.unr.edu" target = "_blank"> <i class="fa fa-envelope " style="color:black"></i></a>
-        <!-- <a href="resume.html" target="_blank"> <i class="fa fa-file fa-2x" style="color:black"></i></a> -->
-
-        <!-- <a href="about.html" target="_blank"> About</a> -->
+        <a href="about.html" target="_blank"> About</a>
         <a href="resume.html" target="_blank"> Resume </a> 
         <a href="projects.html" target="_blank"> Projects</a>
 
 
+
+        <!-- <hr style="display:inline-block" width="2" size="15"> -->
+        <div class="verticalLine">
+
+        <a href="https://github.com/d-sanchez" target="_blank"> <i class="fa fa-github " style="color:black"></i></a> 
+        <a href = "mailto:danielsanchez@nevada.unr.edu" target = "_blank"> <i class="fa fa-envelope " style="color:black"></i></a>
+        </div>
+        
         <p> - Somehow you have found my page. Currently under construction. </p>  
+
     </div>
 
 
