--- a/projects.html
+++ b/projects.html
@@ -4,15 +4,52 @@
 <head>
     <meta charset="utf-8" />
     <title>Daniel's Site</title>
-    <link rel="stylesheet" type="text/css" href="stylesheets/style.css">
-    
+
+    <meta name "viewport" content="width=device-width, initial-scale=1">
+
+    <!-- Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+
+    <!-- JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+    <!-- Font -->
+    <link href="https://fonts.googleapis.com/css?family=Cutive+Mono" rel="stylesheet">
+
+
+    <link href="stylesheets/style.css" rel="stylesheet">
+
+
 </head>
 <body>
 
-- This page is empty (for now)
-<br></br>
-<img src="https://pbs.twimg.com/profile_images/577309793104175104/y2jIo9dq.png" alt="biblethump" style="width:width;height:height;">
+    - Under construction while I fix everything to look visually appealing so here are some pictures of my pets.
+    <br></br>
 
+    <div class="container text-center">
+        <h1> Projects </h1>
+
+
+        <div class="row">
+            <div class="col-sm-4">
+                <p><strong> Cat 1 </strong></p><br>
+                <img src="img/cat1.JPG" class="img-circle picture" alt="Random Name">
+            </div>
+
+            <div class="col-sm-4">
+                <p><strong> Cat 2 </strong></p><br>
+                <img src="img/cat2.JPG" class="img-circle picture" alt="Random Name">
+            </div>
+            <div class="col-sm-4">
+                <p><strong> Doge 1 </strong></p><br>
+                <img src="img/doge1.JPG" class="img-circle picture" alt="Random Name">
+            </div>
+            
+        </div>
+    </div>
 
 </body>
 </html>
