--- a/projects.html
+++ b/projects.html
@@ -36,16 +36,16 @@
         <div class="row">
             <div class="col-sm-4">
                 <p><strong> Cat 1 </strong></p><br>
-                <img src="img/cat1.JPG" class="img-circle picture" alt="Random Name">
+                <img src="images/cat1.JPG" class="img-circle picture" alt="Random Name">
             </div>
 
             <div class="col-sm-4">
                 <p><strong> Cat 2 </strong></p><br>
-                <img src="img/cat2.JPG" class="img-circle picture" alt="Random Name">
+                <img src="images/cat2.JPG" class="img-circle picture" alt="Random Name">
             </div>
             <div class="col-sm-4">
                 <p><strong> Doge 1 </strong></p><br>
-                <img src="img/doge1.JPG" class="img-circle picture" alt="Random Name">
+                <img src="images/doge1.JPG" class="img-circle picture" alt="Random Name">
             </div>
             
         </div>
